
2010-01-04
  Bumped versionCode for release
  Only clear text editor if it contains the prompt (Bug: ANDROID-29)
  Fixed Updates selector title.  (Bug: ANDROID-26)
    
2009-12-23
  Changed package to com.yammer.v1 for re-release