@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.yammer.v1"
-      android:versionCode="16"
+      android:versionCode="17"
       android:versionName="1.1">
 
 	<!--
